--- a/index.html
+++ b/index.html
@@ -319,13 +319,13 @@
      
         /* Output box */
         .output-box {
-            width: 60%;
+            width: 90%;
+            max-width: 764px;
             height: 500px;
             background-color: #1e1e2f;
             border: 2px solid #444;
             padding: 20px;
             border-radius: 20px;
-            margin: 20px auto;
             overflow-y: auto;
             font-family: monospace;
             font-size: 14px;
