--- a/buttons.html
+++ b/buttons.html
@@ -634,7 +634,7 @@
             const backgroundColor = styles.backgroundColor;
 
             // Create a string with the styles
-            const styleString = `.button-copy {\n  width: ${width};\n  height: ${height};\n  border: ${border};\n  border-radius: ${borderRadius};\n  background-color: ${hexColor};\n  display: flex;\n  align-items: center;\n  justify-content: center;\n  color: white;\n  }`;
+            const styleString = `.button-copy {\n  width: ${width};\n  height: ${height};\n  border: ${border};\n  border-radius: ${borderRadius};\n  background-color: ${backgroundColor};\n  display: flex;\n  align-items: center;\n  justify-content: center;\n  color: white;\n  }`;
 
             // Create the HTML example
             const htmlString = `<button class="button-copy">Get started</button>`;
