--- a/buttons.html
+++ b/buttons.html
@@ -339,6 +339,7 @@
             padding: 20px;
             border-radius: 20px;
             overflow-y: auto;
+            margin-bottom:20px;
             font-family: monospace;
             font-size: 14px;
             color: #ccc;
