--- a/div.boxes.html
+++ b/div.boxes.html
@@ -338,6 +338,7 @@
             height: fit-content;
             background-color: #1e1e2f;
             border: 2px solid #444;
+            margin-bottom:20px;
             padding: 20px;
             border-radius: 20px;
             overflow-y: auto;
