--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
     <title>Document</title>
     <style>
         body {
-            background-color: #010118;
+            background-color: #CCD7E4;
             margin: 0;
             padding: 0;
-         
+
         }
-        .main-container{
+
+        .main-container {
             width: 100%;
             height: 100vh;
             display: flex;
             align-items: center;
-            justify-content: start;
-            flex-direction: column;
+            justify-content: center;
+            flex-wrap: wrap;
         }
 
         a {
@@ -77,7 +78,8 @@
             align-items: center;
             justify-content: center;
         }
-        .button-box{
+
+        .button-box {
             height: 60px;
             margin: 10px;
         }
@@ -86,11 +88,15 @@
 
 <body>
     <div class="main-container">
-        <a class="button-box" href="./buttons.html"><button>Buttons</button></a>
-
-    <div class="boxes">
-        <a class="div-box" href="./div.boxes.html">div boxes</a>
-    </div>
+        <div class="boxes">
+            <a class="div-box" href="./buttons.html">Buttons</a>
+        </div>
+        <div class="boxes">
+            <a class="div-box" href="./div.boxes.html">boxes</a>
+        </div>
+        <div class="boxes">
+            <a class="div-box" href="./navbar.html">navbar</a>
+        </div>
     </div>
 </body>
 
