--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
 <body>
     <div class="main-container">
         <div class="boxes">
-            <a class="div-box" href="./buttons.html">Buttons</a>
+            <a class="div-box" href="./html/buttons.html">Buttons</a>
         </div>
         <div class="boxes">
-            <a class="div-box" href="./div.boxes.html">boxes</a>
+            <a class="div-box" href="./html/div.boxes.html">boxes</a>
         </div>
         <div class="boxes">
-            <a class="div-box" href="./navbar.html">navbar</a>
+            <a class="div-box" href="./html/navbar.html">navbar</a>
         </div>
     </div>
 </body>
