--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
         <div class="boxes">
             <a class="div-box" href="./html/navbar.html">navbar</a>
         </div>
+        <div class="boxes">
+            <a class="div-box" href="./html/cards.html">cards</a>
+        </div>
     </div>
 </body>
 
