--- a/html/cards.html
+++ b/html/cards.html
@@ -224,7 +224,7 @@
     <div class="card">
       <div class="blur-box-2"></div>
       <div class="top-side">
-        <img src="/call.jpeg" alt="">
+        <img src="./call.jpeg" alt="">
       </div>
       <div class="down-side">
         <div class="name-big">
@@ -255,7 +255,7 @@
     <div class="card">
       <div class="blur-box"></div>
       <div class="top-side">
-        <img src="/call-2.jpg" alt="">
+        <img src="./call-2.jpg" alt="">
       </div>
       <div class="down-side-2">
         
